added popup module

--- a/modern-todo/index.html
+++ b/modern-todo/index.html
@@ -64,11 +64,9 @@
       </div>  
     </div>
   </div>
-  <!-- <div class="popup">
-    <div class="popup-modal">
-      <h1><i class="ri-error-warning-line"></i>&nbsp;Alert</h1>
-    </div>
-  </div> -->
+  <div class="popup">
+
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="script.js"></script>
 </body>
