--- a/modern-todo/index.html
+++ b/modern-todo/index.html
@@ -20,11 +20,11 @@
         </button>
       </div>
       <div class="search-wrapper">
-        <div class="checkbox-wrapper">
+        <!-- <div class="checkbox-wrapper">
           <div class="checkbox">
             <img src="images/tick.png" alt="">
           </div>
-        </div>
+        </div> -->
         <div action="" id="search">
           <input type="text" name="" id="" placeholder="Create a new todo..">
         </div>
